[tool.poetry]
name = "quality_flask"
version = "0.1.0"
description = ""
authors = ["Jesús Fonseca <jefonbu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
safety = "^1.10.3"
bandit = "^1.7.4"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
